# Indicator_OpenAI_test

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c
main/controller/: terminal_controller.c
main/model/: terminal_btn.c  terminal_city.c  terminal_display.c  terminal_model.c  terminal_openai.c  terminal_openai.h  terminal_sensor.c  terminal_time.c
main/ui/: ui.c  ui.h  ui_helpers.c  ui_helpers.h  ui_img_1251142400.c  ui_img_1630294594.c  ui_img_1630299967.c  ui_img_1979224529.c  ui_img_274874543.c  ui_img_983135800.c  ui_img_ic_openai_logo_1_png.c  ui_img_openai_png.c
main/view/: terminal_view.c  terminal_view.h  view_data.h
